# RTESEditor

./: .gitignore  README.md  launcher.py  main.py  pyproject.toml
RTESEditor/: RTESEditor.spec  build_exe.bat  run.py
app/: export_import.py  mod_manager.py  record_info.py  settings.py
core/: base_record.py  bytes_util.py  encoding.py  file_reader.py
tes3/: field.py  mod_file.py  reader.py  record.py
tes3/format/: format_loader.py  tes3_format.json
ui/: conflict_grid.py  dialogue_panel.py  main_window.py  record_grid.py  text_panel.py  theme.py  tree_panel.py
ui/dialogs/: load_dialog.py  progress_dialog.py
